fixed closed button on mobile

--- a/wedding-website/styles/global.css
+++ b/wedding-website/styles/global.css
@@ -998,7 +998,7 @@ details > .smallerParagraph {
     max-width: 700px;
     display: flex;
     justify-content: flex-end;
-    padding-bottom: 5px;
+    margin: 20px 0;
 }
 
 .closeupImage {
